Hero: Align center, Mouse Animation, Column fix

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -22,7 +22,7 @@
 
             .nav-link {
                 color: $black;
-                font-size: $fs_ls;
+                font-size: $fs_ml;
                 font-weight: 600;
                 padding: .75rem;
                 margin: 0 .75rem;
